compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__functions__exported_functions.snap
---
source: compiler-core/src/javascript/tests/functions.rs
assertion_line: 7
expression: "\npub fn add(x, y) {\n    x + y\n}"
---
----- SOURCE CODE

pub fn add(x, y) {
    x + y
}

----- COMPILED JAVASCRIPT
export function add(x, y) {
  return x + y;
}
