compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__functions__fn_return_fn_typescript.snap
---
source: compiler-core/src/javascript/tests/functions.rs
assertion_line: 315
expression: "pub fn main(f: fn(Int) -> Int) {\n  let func = fn(x, y) { f(x) + f(y) }\n  func\n}\n"
---
----- SOURCE CODE
pub fn main(f: fn(Int) -> Int) {
  let func = fn(x, y) { f(x) + f(y) }
  func
}


----- TYPESCRIPT DEFINITIONS
export function main(f: (x0: number) => number): (x0: number, x1: number) => number;
