compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__functions__function_formatting_typescript.snap
---
source: compiler-core/src/javascript/tests/functions.rs
assertion_line: 86
expression: "\npub fn add(the_first_variable_that_should_be_added, the_second_variable_that_should_be_added) {\n  the_first_variable_that_should_be_added + the_second_variable_that_should_be_added\n}"
---
----- SOURCE CODE

pub fn add(the_first_variable_that_should_be_added, the_second_variable_that_should_be_added) {
  the_first_variable_that_should_be_added + the_second_variable_that_should_be_added
}

----- TYPESCRIPT DEFINITIONS
export function add(
  the_first_variable_that_should_be_added: number,
  the_second_variable_that_should_be_added: number
): number;
